# Geant4-Simulation

./: CMakeLists.txt  GPS_electron.mac  GPS_gamma.mac  Poly176_gamma1.mac  README.md  compton.mac  compton2.mac  compton_neutron.mac  electron_read.C  exampleB4c.cc  gamma_read.C  generatei_mac.C  geo_test.mac  interaction.C  makespectrum.C  plotHisto.C  read.C  run_176Polyelectron1.mac  run_176Polygamma1.mac  run_test.mac  self.C  spectrum.mac  spectrum_neutron.mac  test_spectrum.mac  vis.mac
common/include/: B4PrimaryGeneratorAction.hh  B4RunAction.hh  B4cActionInitialization.hh  B4cDetectorConstruction.hh  B4cEventAction.hh  SteppingAction.hh  myPhysicsList.hh
common/src/: AnalysisManager.cc  B4PrimaryGeneratorAction.cc  B4RunAction.cc  B4cActionInitialization.cc  B4cCalorHit.cc  B4cCalorimeterSD.cc  B4cEventAction.cc  SteppingAction.cc  myPhysicsList.cc
res/: electron_12P5_4Plus2thick_Pb_SSC_HE.root  gamma_12P5_4Plus2thick_Pb_SSC_HE.root
src/: B4cDetectorConstruction.cc
